Fix iOS bug with 20 pixels too high.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,9 +2,6 @@
   direction :rtl;
 }
 
-body{
-	background-color: red;
-}
 .partySize {
 	float : left;
 	padding-left : 1em;
